<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.foolish</groupId>
  <artifactId>foolish</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <antlr4.version>4.13.2</antlr4.version>
    <junit.platform.version>1.13.4</junit.platform.version>
      <jackson.version>2.17.2</jackson.version>
  </properties>

  <dependencies>
    <!-- ANTLR runtime -->
    <dependency>
      <groupId>org.antlr</groupId>
      <artifactId>antlr4-runtime</artifactId>
      <version>${antlr4.version}</version>
    </dependency>
    <!-- JUnit Platform Console Standalone -->
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-console-standalone</artifactId>
      <version>${junit.platform.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- ApprovalTests for snapshot-based testing -->
    <dependency>
      <groupId>com.approvaltests</groupId>
      <artifactId>approvaltests</artifactId>
      <version>25.0.23</version>
      <scope>test</scope>
    </dependency>
      <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter-engine</artifactId>
          <version>5.10.2</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter-api</artifactId>
          <version>5.10.2</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>com.google.guava</groupId>
          <artifactId>guava</artifactId>
          <version>33.5.0-jre</version>
      </dependency>
  </dependencies>

  <build>
    <plugins>
      <!-- ANTLR4 Maven Plugin for grammar generation -->
      <plugin>
        <groupId>org.antlr</groupId>
        <artifactId>antlr4-maven-plugin</artifactId>
        <version>${antlr4.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>antlr4</goal>
            </goals>
            <configuration>
              <arguments>
                <argument>-package</argument>
                <argument>org.foolish.grammar</argument>
                <argument>-visitor</argument>
              </arguments>
              <outputDirectory>${project.build.directory}/generated-sources/antlr4/org/foolish/grammar</outputDirectory>
              <sourceDirectory>src/main/antlr4</sourceDirectory>
<!--              <packageOutputDirectory>true</packageOutputDirectory>-->
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- Compiler plugin -->
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.0</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>

      <!-- Add generated sources to compilation -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>3.6.1</version>
        <executions>
          <execution>
            <id>add-source</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>${project.build.directory}/generated-sources/antlr4</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
            <configuration>
              <includes>
                  <include>**/*Test.java</include>
              </includes>
            </configuration>
      </plugin>
    </plugins>
  </build>
	<profiles>
	  <profile>
		<id>all-tests</id>
		<activation>
			<activeByDefault>true</activeByDefault>
		</activation>
		<build> <plugins> <plugin> <artifactId>maven-surefire-plugin</artifactId> <version>3.2.5</version>
		    <configuration> <includes> <include>**/*Test.java</include> </includes> </configuration>
		</plugin> </plugins> </build>
	  </profile>
	  <profile>
		<id>unit-tests</id>
		<activation>
			<activeByDefault>false</activeByDefault>
		</activation>
		<build> <plugins> <plugin> <artifactId>maven-surefire-plugin</artifactId> <version>3.2.5</version>
		    <configuration> <includes> <include>**/*UnitTest.java</include> </includes> </configuration>
		</plugin> </plugins> </build>
	  </profile>
	  <profile>
		<id>approval-tests</id>
		<activation>
			<activeByDefault>false</activeByDefault>
		</activation>
		<build> <plugins> <plugin> <artifactId>maven-surefire-plugin</artifactId> <version>3.2.5</version>
		    <configuration> <includes> <include>**/*ApprovalTest.java</include> </includes> </configuration>
		</plugin> </plugins> </build>
	  </profile>


	</profiles>
</project>
